<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/registration_bar"
        style="@style/Widget.WaitingRoom.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0sp" >

        <androidx.appcompat.widget.Toolbar
            style="@style/Widget.WaitingRoom.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/register" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/round_bg"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24sp"
        android:padding="12sp"
        android:layout_marginRight="24sp"
        android:layout_below="@id/registration_bar">

        <TextView
            android:id="@+id/subtitle_personal_info"
            android:layout_width="match_parent"
            style="@style/TextAppearance.WaitingRoom.Subtitle1"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_personal_info" />

        <LinearLayout
            android:id="@+id/full_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtitle_personal_info">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_text_input"
                style="@style/Widget.WaitingRoom.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = ".50"
                android:maxLines="1"
                android:hint="@string/surname">

                <EditText
                    android:id="@+id/surname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginEnd="4dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_text_input"
                style="@style/Widget.WaitingRoom.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = ".50"
                android:maxLines="1"
                android:hint="@string/last_name">

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthday"
            style="@style/Widget.WaitingRoom.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name_container"
            android:maxLines="1"
            android:hint = "@string/birthday" >

            <EditText
                android:id="@+id/birthday_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/street_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_below="@id/birthday">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/street_text_input"
                style="@style/Widget.WaitingRoom.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = ".70"
                android:maxLines="1"
                android:hint="@string/street">

                <EditText
                    android:id="@+id/street_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:inputType="textPostalAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zip_text_input"
                style="@style/Widget.WaitingRoom.TextInputLayout"
                android:layout_width="0dp"
                android:layout_weight = ".30"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/zip_code">

                <EditText
                    android:id="@+id/postcode_edit_text"
                    android:layout_width="match_parent"
                    android:layout_marginStart="4dp"
                    android:inputType="textPostalAddress"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_text_input"
            style="@style/Widget.WaitingRoom.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_below="@id/street_container"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/city">

            <EditText
                android:id="@+id/city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/subtitle_account_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.WaitingRoom.Subtitle1"
            android:layout_below="@id/city_text_input"
            android:text="@string/subtitle_account_info" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.WaitingRoom.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtitle_account_info"
            android:hint="@string/hint_email">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.WaitingRoom.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text_input"
            android:hint="@string/hint_password">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_repeat_text_input"
            style="@style/Widget.WaitingRoom.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_text_input"
            android:hint="@string/hint_password_repeat">

            <EditText
                android:id="@+id/password_repeat_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="@string/hint_password"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/Widget.WaitingRoom.AccentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_repeat_text_input"
            android:layout_alignParentEnd="true"
            android:text="@string/save_info" />
    </RelativeLayout>

</RelativeLayout>