<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.WaitingRoom.AppBar"
            android:layout_marginBottom="0sp" >

            <androidx.appcompat.widget.Toolbar
                style="@style/Widget.WaitingRoom.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/overview" />
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_below="@id/app_bar">

            <TextView
                android:id="@+id/your_appointments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_appointments"
                style="@style/TextAppearance.WaitingRoom.Subtitle1"
                android:layout_marginBottom="8dp"/>

            <RelativeLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_below="@id/your_appointments"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bg">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/appointments"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tipps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipps"
                android:layout_below="@id/table"
                style="@style/TextAppearance.WaitingRoom.Subtitle1"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_below="@id/tipps"
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_bg" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"

                    android:padding="8dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@mipmap/blue_light"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:id="@+id/first_card_title"
                        style="@style/TextAppearance.WaitingRoom.Title"
                        android:text="@string/card_title1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:id="@+id/first_card_text"
                        android:text= "@string/card_text1"
                        style="@style/TextAppearance.WaitingRoom.CardView.Text"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_below="@id/card1"
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_bg" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@mipmap/clock"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:id="@+id/second_card_title"
                        style="@style/TextAppearance.WaitingRoom.Title"
                        android:text="@string/card_title2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:id="@+id/second_card_text"
                        android:text="@string/card_text2"
                        style="@style/TextAppearance.WaitingRoom.CardView.Text"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_below="@id/card2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_bg" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@mipmap/corona_foreground"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:id="@+id/third_card_title"
                        style="@style/TextAppearance.WaitingRoom.Title"
                        android:text="@string/card_title3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:id="@+id/third_card_text"
                        android:text="@string/card_text3"
                        style="@style/TextAppearance.WaitingRoom.CardView.Text"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
