<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.WaitingRoom.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/menu" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp">

        <androidx.cardview.widget.CardView
            android:id="@+id/account_info_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12sp"
            android:background="@drawable/round_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/textColorPrimary"
                android:paddingStart="12sp"
                android:text="@string/account_info"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/doctors_card"
            android:layout_width="match_parent"
            android:layout_below="@id/account_info_card"
            android:layout_height="50dp"
            android:layout_marginBottom="12sp"
            android:background="@drawable/round_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/textColorPrimary"
                android:paddingStart="12sp"
                android:text="@string/doctors"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/faq_card"
            android:layout_below="@id/doctors_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/textColorPrimary"
                android:paddingStart="12sp"
                android:text="@string/faq"/>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
